User can resize rows & columns using mouse, improved readme.md, and some other minor changes